# noupdatethunk

./: .gitignore  CHANGELOG.md  README.md  cabal.project  default.nix  noupdatethunk.cabal
ghc-dup/: .gitignore  dup-conduit.sh  ghc-dup.cabal
ghc-dup/cbits/: dup-prim.cmm  dup.c
ghc-dup/src/GHC/: Dup.hs
ghc-dup/src/GHC/Dup/: IO.hs  Prim.hs  ST.hs
ghc-dup/test/: ConduitProblem.hs  Driver.hs  DupSpec.hs  Main  Main.hi  Main.hs
ghc-dup/tests/: Bits.hs  Conduit.hs  PaperStats.hs
ghc-dup/tests/conduit-problem/: cabal.project  the-conduit-problem.cabal
ghc-dup/tests/conduit-problem/app/: Main.hs
ghc-dup/tests/conduit-problem/debugger/: Main.hs
nix/: default.nix  sources.json
