Cabal-version:       2.4
Name:                ghc-dup
Version:             0.1
Synopsis:            Explicitly prevent sharing
Description:
  This package provides two new operations, 'GHC.Dup.dup' and 'GHC.Dup.deepDup', that allow the
  programmer to prevent the result of two evaluations of the same expression to
  be shared.
  .
  See <http://arxiv.org/abs/1207.2017> for more background.
  .
  /This is still experimental software and can likely cause your program to crash./
  .
  The work on this package has been supported by the Deutsche Telekom Stiftung
  (<http://telekom-stiftung.de>).
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Joachim Breitner
Maintainer:          Joachim Breitner <mail@joachim-breitner.de>
Copyright:           2012 Joachim Breitner
Category:            Debug, GHC
Build-type:          Simple
--Extra-source-files:  Demo.hs

--Flag prim-supports-any
--    Description: The used GHC supports Any as an argument to foreign prim functions (GHC ticket #5931)
--    Default: False

Library
  Exposed-modules: GHC.Dup
  Default-Language:    Haskell2010
  Build-depends:
    base,
    ghc
  C-Sources: cbits/dup.c cbits/dup-prim.cmm
  Hs-source-dirs: src/
  Ghc-options: -Wall

executable dup-bits
  main-is:           Bits.hs
  hs-source-dirs:       tests
  default-language: Haskell2010
  build-depends: base, ghc-dup

executable dup-paperstats
  main-is:           PaperStats.hs
  hs-source-dirs:       tests
  default-language: Haskell2010
  build-depends: base, ghc-dup, process
  ghc-options: -debug -with-rtsopts=-T -DS
--  if flag(prim-supports-any)
--    cpp-options: -DPRIM_SUPPORTS_ANY
  
source-repository head
  type:     darcs
  location: http://darcs.nomeata.de/ghc-dup/
